# Tunasbotos

./: README.md  config.py  main.py  pyproject.toml
extractor/: baraagex.py  discordex.py  exhentaiex.py  fanbox2kemonoEx.py  gelbooruex.py  getHeaders.py  hitomiex.py  kemonoex.py  mainExtractor.py  misskeyex.py  nhentaiex.py  pixivex.py  plurkex.py  twitterex.py  yanderex.py
extractor/fanbox/: fanboxex.py  get_support_count.py  getallpage.py  getpostinfo.py  ofDownload.py
util/: chatBot.py  cleanupFiles.py  downloadFile.py  getHeader.py  get_serverinfo.py  imagePredict.py  initdatabase.py  kemomimiUpdate.py  outputformatter.py  prompts_manager.py  randomSticker.py  stickerFetch.py  telegraphUpload.py  tgmp4Parser.py  uploadImageToR2.py  uploadtoMinio.py  webpConverter.py
